# example

cache-machine/: README.md  package.json  process.json
cache-machine/lib/: child.js  index.js  worker.js  xx.js
cache-machine/native/: Cargo.toml
cache-machine/native/src/: lib.rs
